Minor changes in grammar

--- a/DataEnginiring.ipynb
+++ b/DataEnginiring.ipynb
@@ -580,7 +580,7 @@
    "id": "9b0f1b74-0739-485e-9321-738f40e559fb",
    "metadata": {},
    "source": [
-    "Если поиграться с коэффициент можно добиться неплохого результата, __НО__ этого недостаточно, так как с большим коэффициент за 80 единиц иногда проходят ошибки, где предмет определяется правильно, но его объем может отличаться. Так же можно заметить, что все обычно все слова из таблицы с кодами __sku__ будут в названии товара __.json файла__, но у второго могут быть дополнительные слова в названии, которые дополняют название товара, но для нас они не важны. Поэтому мы можем сравнивать, строки следующим образом, если все слова из первой строки входят во вторую, то мы считаем, что это одинаковые товары."
+    "Если поиграться с коэффициентом можно добиться неплохого результата, __НО__ этого недостаточно, так как с большим коэффициент за 80 единиц иногда проходят ошибки, где предмет определяется правильно, но его объем может отличаться. Так же можно заметить, что все слова из таблицы с кодами __sku__ будут в названии товара __.json файла__, но у второго могут быть дополнительные слова в названии, которые дополняют название товара, но для нас они не важны. Поэтому мы можем сравнивать, строки следующим образом, если все слова из первой строки входят во вторую, то мы считаем, что это одинаковые товары."
    ]
   },
   {
